added migrations, small fixes

--- a/PL_API/appsettings.json
+++ b/PL_API/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "HelpGetSet": "Server = localhost, 1433; Database = HelpGetSet; User ID = sa; Password = <password12345>"
+    "HelpGetSet": "Server = localhost, 1433; Database = HelpGetSet; User ID = sa; Password = <password12345>; TrustServerCertificate = True"
   },
   "AuthOptions": {
     "Issuer": "http://localhost:44337",
