removed extra folder, fixed bugs, added dockerfile...

--- a/HelpGetSet_WebService/PL_API/Properties/launchSettings.json
+++ b/HelpGetSet_WebService/PL_API/Properties/launchSettings.json
@@ -4,7 +4,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:15892",
+      "applicationUrl": "https://helpgetset-production-56ea.up.railway.app",
       "sslPort": 44337
     }
   },
@@ -13,8 +13,8 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "launchUrl": "helpsite",
-      "applicationUrl": "https://localhost:5001;http://localhost:5000",
+      "launchUrl": "swagger",
+      "applicationUrl": "https://helpgetset-production-56ea.up.railway.app",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -22,7 +22,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "swagger",
+      "launchUrl": "helpsite",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
