--- a/HelpGetSet_WebService/PL_API/appsettings.json
+++ b/HelpGetSet_WebService/PL_API/appsettings.json
@@ -8,11 +8,11 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "HelpGetSet": "Server = localhost, 1433; Database = HelpGetSet; User ID = sa; Password = <password12345>; TrustServerCertificate = True"
+    "railway": "Host=containers-us-west-201.railway.app;Port=6441;Database=railway;Username=postgres;Password=WGMTdYpiHA6TJGlFYZSp"
   },
   "AuthOptions": {
-    "Issuer": "http://localhost:44337",
-    "Audience": "http://localhost:4200/",
+    "Issuer": "https://helpgetset-production-56ea.up.railway.app",
+    "Audience": "https://helpgetsetui-production-4f25.up.railway.app",
     "Key": "ekfwkfjljskdjkfjsjfw202fsjlfkjslnvsvn9202"
   }
 }
